// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/ui/Dialog default 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask p-component-overlay "
    style="z-index: 1007;"
  >
    <div
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1008;"
    >
      <div
        class="p-dialog-header"
      >
        <!---->
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      />
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`storyshots components/ui/Dialog with header and content 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask p-component-overlay "
    style="z-index: 1008;"
  >
    <div
      aria-labelledby="pv_id_15_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1009;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_15_header"
        >
          This is the header
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      >
        
        This is the dialog content
      
      </div>
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`storyshots components/ui/Dialog with header, content and actions 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="p-dialog-mask p-component-overlay "
    style="z-index: 1009;"
  >
    <div
      aria-labelledby="pv_id_16_header"
      aria-modal="true"
      class="p-dialog p-component p-dialog-enter p-dialog-enter-active"
      role="dialog"
      style="z-index: 1010;"
    >
      <div
        class="p-dialog-header"
      >
        <span
          class="p-dialog-title"
          id="pv_id_16_header"
        >
          This is the header
        </span>
         
        <div
          class="p-dialog-header-icons"
        >
          <!---->
           
          <button
            aria-label="close"
            class="p-dialog-header-icon p-dialog-header-close p-link"
            tabindex="-1"
            type="button"
          >
            <span
              class="p-dialog-header-close-icon pi pi-times"
            />
          </button>
        </div>
      </div>
       
      <div
        class="p-dialog-content"
        style="max-height: 70vh;"
      >
        
        This is the dialog content
      
      </div>
       
      <div
        class="p-dialog-footer"
      >
        <button
          class="p-button-text p-button-secondary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-times p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Cancel
          </span>
           
          <!---->
        </button>
         
        <button
          class="p-button-primary p-button p-component"
          type="button"
        >
          <span
            class="pi pi-check p-button-icon p-button-icon-left"
          />
           
          <span
            class="p-button-label"
          >
            Submit
          </span>
           
          <!---->
        </button>
      </div>
    </div>
  </div>
</div>
`;
